# rb-sys

./: .gitignore  .prettierignore  .rubocop.yml  .ruby-version  .standard.yml  404.html  AGENTS.md  CNAME  CONTRIBUTING.md  Cargo.toml  Cross.toml  EMBEDDED_TOOLS_IMPLEMENTATION.md  Gemfile  Makefile.toml  Rakefile  api-documentation.html  background-and-concepts.html  build-process.html  build.rs  classes-and-modules.html  community-support.html  cross-platform.html  debugging.html  development-approaches.html  ebay_speaker_scraper.py  error-handling.html  flake.nix  getting-started.html  hello-rusty-documentation.html  index.html  introduction.html  memory-management.html  opensearch.xml  print.html  project-setup.html  quick-start.html  readme.md  searchindex.js  searchindex.json  sitemap.xml  (+7 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  Dockerfile.cross  devcontainer.json  on-post-attach.sh  welcome-message.cross.txt  welcome-message.txt
.github/: FUNDING.yml  dependabot.yml
api-reference/: rb-sys-features.html  rb-sys-gem-config.html  test-helpers.html
bench/: Cargo.toml
bench/bench/: main.rs
bench/src/: baselines.rs  lib.rs  run.rs  stable_abi_bench.rs  stable_abi_rarray.rs  stable_abi_rstring.rs
book/: README.md  book.toml  build_with_sitemap.sh  generate_sitemap.py
crates/rb-allocator/: Cargo.toml  readme.md  tmp.txt
crates/rb-allocator/src/: lib.rs
crates/rb-src/: Cargo.toml
crates/rb-src/src/: lib.rs  main.rs
crates/rb-sys/: Cargo.toml  LICENSE-MIT  build.rs  readme.md  wrapper.h
crates/rb-sys-build/: Cargo.toml  LICENSE-MIT
crates/rb-sys-build/data/: assets.tar.zst
crates/rb-sys-build/src/: bindings.rs  cc.rs  lib.rs  main.rs  pregenerated.rs  rb_config.rs  utils.rs
crates/rb-sys-build/src/bindings/: builder.rs  cfg.rs  docs.rs  filter.rs  gc_stress.rs  link_directives.rs  native_types.rs  ruby_headers.rs  sanitizer.rs  stable_abi.rs  stable_api.rs  wrapper.h  wrapper_windows.h
crates/rb-sys-build/src/rb_config/: flags.rs  library.rs  search_path.rs
crates/rb-sys-cli/: AGENTS.md  Cargo.toml  EMBEDDED_TOOLS.md  README.md  build.rs
crates/rb-sys-cli/oci-digest-helper/: Cargo.toml
crates/rb-sys-cli/oci-digest-helper/src/: main.rs
crates/rb-sys-cli/phase_0/: Cargo.toml
crates/rb-sys-cli/phase_0/src/: cache.rs  config.rs  digest.rs  lockfile.rs  main.rs  manifest.rs  oci.rs  rbconfig_parser.rs  zig.rs
crates/rb-sys-cli/phase_0/src/fetchers/: mod.rs  oci_extract.rs  tarball.rs  tarball_extract.rs
crates/rb-sys-cli/phase_1/: Cargo.toml
crates/rb-sys-cli/phase_1/src/: assets.rs  bindings.rs  codegen.rs  config.rs  main.rs  manifest.rs  tools.rs  transform.rs
crates/rb-sys-cli/phase_2/: Cargo.toml
crates/rb-sys-cli/phase_2/src/: main.rs
crates/rb-sys-cli/src/: blake3_hash.rs  build.rs  extractor.rs  generated_mappings.rs  generated_toolchain_mappings.rs  libclang.rs  main.rs  rbconfig_parser.rs  shim_generator.rs  sysroot.rs  toolchain.rs  tools.rs
crates/rb-sys-cli/src/assets/: manifest.rs  mod.rs
crates/rb-sys-cli/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/rb-sys-cli/src/zig/: ar.rs  args.rs  cc.rs  cpu.rs  dlltool.rs  env.rs  ld.rs  libc.rs  manager.rs  mod.rs  shim.rs  target.rs  tool.rs
crates/rb-sys-cli/src/zig/tools/: ar.rs  cc.rs  dlltool.rs  ld.rs  mod.rs
crates/rb-sys-cross/: Cargo.toml  README.md  build.rs
crates/rb-sys-cross/src/: cargo_metadata.rs  main.rs  platform.rs  profile.rs  rbconfig.rs  toolchain.rs  util.rs
crates/rb-sys-cross/src/cmd/: build.rs  headers.rs  list_platforms.rs  mod.rs  setup.rs
crates/rb-sys-cross/src/gem/: gemspec.rs  mod.rs  pack.rs
crates/rb-sys-cross/src/headers/: build.rs  cache.rs  download.rs  mod.rs
crates/rb-sys-env/: Cargo.toml  build.rs  readme.md
crates/rb-sys-env/src/: defines.rs  lib.rs  rb_env.rs  ruby_version.rs  test_helpers.rs  utils.rs
crates/rb-sys-local/: Cargo.toml  readme.md
crates/rb-sys-local/src/: bindings.rs  lib.rs  ruby_macros.rs  version.rs
crates/rb-sys-test-helpers/: Cargo.toml  readme.md
crates/rb-sys-test-helpers-macros/: Cargo.toml  readme.md
crates/rb-sys-test-helpers-macros/src/: lib.rs
crates/rb-sys-test-helpers/src/: lib.rs  once_cell.rs  ruby_exception.rs  ruby_test_executor.rs  utils.rs
crates/rb-sys-tests/: Cargo.toml  build.rs
crates/rb-sys-tests/benches/: main.rs
crates/rb-sys-tests/src/: basic_smoke_test.rs  helpers.rs  lib.rs  memory_test.rs  rarray_test.rs  ruby_abi_version_test.rs  ruby_macros_test.rs  special_consts_test.rs  stable_abi_test.rs  stable_api_test.rs  symbol_test.rs  tracking_allocator_test.rs  value_type_test.rs
crates/rb-sys-tests/tests/: basic_smoke_test.rs  helpers.rs  lib.rs  ruby_abi_version_test.rs  ruby_macros_test.rs
crates/rb-sys/src/: allocator.rs  assert.rs  bindings.rs  ffi.rs  hidden.rs  lib.rs  macros.rs  memory.rs  os.rs  rarray.rs  ruby_abi_version.rs  special_consts.rs  stable_abi.rs  stable_api.rs  symbol.rs  tracking_allocator.rs  utils.rs  value_type.rs
crates/rb-sys/src/macros/: mod.rs  ruby_macros.c
crates/rb-sys/src/ruby_macros/: mod.rs  ruby_macros.c  ruby_macros.h
crates/rb-sys/src/stable_abi/: compiled.c  compiled.rs  ruby_2_4.rs  ruby_2_6.rs  ruby_2_7.rs  ruby_3_0.rs  ruby_3_1.rs  ruby_3_2.rs  ruby_dev.rs  tests.rs
crates/rb-sys/src/stable_api/: compiled.c  compiled.rs  ruby_2_6.rs  ruby_2_7.rs  ruby_3_0.rs  ruby_3_1.rs  ruby_3_2.rs  ruby_3_3.rs  ruby_3_4.rs  ruby_4_0.rs
crates/rb-sys/src/unlinkable/: compiled_c_impls.c  compiled_c_impls.rs  embeddable.rs  mod.rs  rust_impls.rs
crates/rb-sys/tests/: basic_smoke_test.rs
data/: README.md  assets_manifest.toml  toolchains.json  (+1 more)
examples/rust_reverse/ext/rust_reverse/: Cargo.toml  extconf.rb  extconf_bare.rb
examples/rust_reverse/ext/rust_reverse/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rarray_rust_impls.rs  rstring_rust_impls.rs
rb-ext/: Cargo.toml
rb-ext/src/: lib.rs
rb-sys/: Cargo.toml  build.rs
rb-sys/examples/rust_ruby_example/src/: lib.rs
rb-sys/examples/simple/: Makefile.toml
rb-sys/examples/simple/src/: lib.rs
rb-sys/src/: lib.rs
(+2934 files in other folders)
