[workspace]
members = [
    "crates/rb-sys",
    "crates/rb-sys-tests",
    "crates/rb-sys-build",
    "crates/rb-sys-env",
    "crates/rb-sys-test-helpers",
    "crates/rb-sys-test-helpers-macros",
    "bench",
]
exclude = [
    "examples/rust_reverse/ext/rust_reverse",
    "crates/rb-sys-test-helpers-macros-impl",
    "./fuzz",
]
