[workspace]
resolver = "2"
members = [
    "crates/rb-sys",
    "crates/rb-sys-tests",
    "crates/rb-sys-build",
    "crates/rb-sys-env",
    "crates/rb-sys-test-helpers",
    "crates/rb-sys-test-helpers-macros",
    "crates/rb-sys-cli",
    "crates/rb-sys-cli/oci-digest-helper",
    "crates/rb-sys-cli/phase_0",
    "crates/rb-sys-cli/phase_1",
]
exclude = [
    "examples/rust_reverse/ext/rust_reverse",
    "crates/rb-sys-test-helpers-macros-impl",
    "./fuzz",
    "./bench",
]

[profile.dev]
strip = false
