[package]
name = "rb-allocator"
version = "0.1.0"
edition = "2018"
readme = "readme.md"
categories = ["memory-management"]
description = "Memorry allocator for Ruby extensions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
homepage = "https://github.com/oxidize-rb/rb-sys"
documentation = "https://docs.rs/rb-allocator"

[dependencies]
# rb-sys = { path = "../rb-sys", version = "0.8.1" }
rb-sys = { path = "../rb-sys", version = "0.8.1" }
