[package]
name = "rb-sys-build"
version = "0.9.63"
edition = "2018"
description = "Build system for rb-sys"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
rust-version = "1.51"

[lib]
bench = false
doctest = false

[dependencies]
regex = "1"
shell-words = "1.1"
bindgen = { version = "0.62", default-features = false, features = ["runtime"] }
cc-impl = { version = "1.0", optional = true, package = "cc" }

[features]
default = []
cc = ["cc-impl"]
bindgen-rbimpls = []
bindgen-deprecated-types = []
bindgen-layout-tests = []
bindgen-impl-debug = []
