[package]
name = "rb-sys-build"
version = "0.9.64"
edition = "2018"
description = "Build system for rb-sys"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
rust-version = "1.60"

[lib]
bench = false
doctest = false

[dependencies]
regex = { version = "1" }
shell-words = "1.1"
bindgen = { version = "0.60", default-features = false, features = ["runtime"] }
cc-impl = { version = "1.0", optional = true, package = "cc" }
syn = { version = "1.0", features = ["parsing", "full"] }
quote = { version = "1.0" }
lazy_static = "1.4.0"

[features]
default = ["rustfmt"]
cc = ["cc-impl"]
docs = []
rustfmt = []
bindgen-rbimpls = []
bindgen-deprecated-types = []
bindgen-layout-tests = []
bindgen-impl-debug = []
