[package]
name = "rb-sys-build"
version = "0.9.111"
edition = "2018"
description = "Build system for rb-sys"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
rust-version = "1.65"

[lib]
bench = false
doctest = false

[dependencies]
regex = "1"
shell-words = "1.1"
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
syn = { version = "2.0", features = ["parsing", "full", "extra-traits"] }
quote = "1.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0"

[features]
default = []
bindgen-rbimpls = []
bindgen-deprecated-types = []
bindgen-layout-tests = []
bindgen-impl-debug = []
bindgen-sizet-is-usize = []
bindgen-return-const-encoding-pointers = []
bindgen-enable-function-attribute-detection = []
