[package]
name = "rb-sys-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
license = "MIT OR Apache-2.0"
description = "A CLI for easily cross-compiling Rust native gems"
authors = ["Ian Ker-Seymer <i.kerseymer@gmail.com>"]

[[bin]]
name = "cargo-gem"
path = "src/main.rs"

[features]
default = []
# Enable bundled Zig compiler. When enabled, cargo-gem will embed the Zig
# binary for the host platform and extract it on first use.
# This requires the Zig archives to be present in src/embedded/tools/.
bundled-zig = []

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
tempfile = "3.10"
tar = "0.4"
regex = "1"
dirs = "5.0"
ruby-prism = "1.2.0"
ruby-prism-sys = "1.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indoc = "2.0"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
