[package]
name = "rb-sys-env"
version = "0.1.2"
edition = "2018"
description = "Integrate rb-sys into your Cargo project"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
readme = "readme.md"
rust-version = "1.51"

[lib]
bench = false
doctest = true

[dependencies]
async-executor = { version = "1.5.1", optional = true }
futures-lite = { version = "1.13.0", optional = true }
rb-sys = { path = "../rb-sys", optional = true, features = ["link-ruby"] }

[dev-dependencies]
rb-sys = { path = "../rb-sys", features = ["link-ruby"] }

[features]
default = ["test-helpers"]
test-helpers = ["async-executor", "futures-lite", "rb-sys"]
