[package]
name = "rb-sys-env"
version = "0.1.2"
edition = "2018"
description = "Integrates rb-sys into high level frameworks"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
readme = "readme.md"
rust-version = "1.60"

[lib]
bench = false
doctest = false
