[package]
name = "rb-sys-test-helpers-macros"
version = "0.2.1"
edition = "2018"
description = "Macros for the rb-sys-test-helpers crate"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
readme = "readme.md"
rust-version = "1.65"

[lib]
proc-macro = true
bench = false
doctest = true

[dependencies]
syn = { version = "2.0", features = ["parsing", "full"] }
quote = "1.0"
