[package]
name = "rb-sys-test-helpers"
version = "0.1.0"
edition = "2018"
description = "Helpers for testing Ruby extensions from Rust"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
readme = "readme.md"
rust-version = "1.51"

[lib]
bench = false
doctest = true

[dependencies]
rb-sys = { path = "../rb-sys", features = ["link-ruby"] }
rb-sys-test-helpers-macros = { path = "../rb-sys-test-helpers-macros" }
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }

[build-dependencies]
rb-sys-env = { path = "../rb-sys-env" }
