[package]
name = "rb-sys-test-helpers"
version = "0.2.0"
edition = "2018"
description = "Helpers for testing Ruby extensions from Rust"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidize-rb/rb-sys"
readme = "readme.md"
rust-version = "1.63"

[lib]
bench = false
doctest = true

[dependencies]
rb-sys = { path = "../rb-sys", version = "~0.9.80", features = [
  "link-ruby",
  "stable-api-compiled-testing",
] }
rb-sys-test-helpers-macros = { version = "0.2.0", path = "../rb-sys-test-helpers-macros" }

[build-dependencies]
rb-sys-env = { version = "0.1.2", path = "../rb-sys-env" }

[dev-dependencies]
rusty-fork = "0.3.0"
