[package]
name = "rb-sys-tests"
version = "0.9.79"
edition = "2018"
autotests = false
publish = false
rust-version = "1.59"

[lib]
bench = false
doctest = false
doc = false

[features]
default = ["ruby-macros"]
ruby-macros = ["rb-sys/ruby-macros"]

[dependencies]
rb-sys = { path = "../rb-sys", features = ["link-ruby", "rb-gc-guard"] }
rb-sys-env = { path = "../rb-sys-env" }
rb-sys-test-helpers = { path = "../rb-sys-test-helpers" }
rusty-fork = "0.3.0"

[build-dependencies]
rb-sys-env = { path = "../rb-sys-env" }
