[package]
name = "rb-sys-tests"
version = "0.9.123"
edition = "2018"
autotests = false
publish = false
rust-version = "1.71"

[lib]
bench = false
doctest = false
doc = false

[dependencies]
rb-sys = { path = "../rb-sys", features = [
  "link-ruby",
  "stable-api-compiled-testing",
] }
rb-sys-env = { path = "../rb-sys-env" }
rb-sys-test-helpers = { path = "../rb-sys-test-helpers" }
rusty-fork = "0.3.1"

[build-dependencies]
rb-sys-env = { path = "../rb-sys-env" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(ruby_has_ruby_abi_version,)",
] }
