[package]
build = "build/main.rs"
name = "rb-sys"
version = "0.9.79"
edition = "2018"
readme = "readme.md"
categories = ["external-ffi-bindings"]
description = "Rust bindings for the CRuby API"
documentation = "https://docs.rs/rb-sys"
homepage = "https://github.com/oxidize-rb/rb-sys"
license = "MIT OR Apache-2.0"
links = "rb"
repository = "https://github.com/oxidize-rb/rb-sys"
rust-version = "1.57"

[build-dependencies]
rb-sys-build = { version = "0.9.79", path = "../rb-sys-build" }

[dev-dependencies]
rb-sys-test-helpers = { path = "../rb-sys-test-helpers" }
rb-sys = { path = ".", features = [
  "ruby-macros",
  "stable-api",
  "stable-api-compiled",
  "link-ruby",
  "extra-warnings",
] }
rusty-fork = "0.3.0"

[features]
default = ["ruby-macros", "stable-api"]
link-ruby = []
fuzz = []
no-link-ruby = []
ruby-static = []
global-allocator = []
extra-warnings = []
ruby-macros = ["stable-api"]
stable-api = ["rb-sys-build/stable-api"]
stable-api-compiled = []
bindgen-rbimpls = ["rb-sys-build/bindgen-rbimpls"]
bindgen-deprecated-types = ["rb-sys-build/bindgen-deprecated-types"]
bindgen-layout-tests = ["rb-sys-build/bindgen-layout-tests"]
bindgen-impl-debug = ["rb-sys-build/bindgen-impl-debug"]
bindgen-sizet-is-usize = ["rb-sys-build/bindgen-sizet-is-usize"]
bindgen-return-const-encoding-pointers = [
  "rb-sys-build/bindgen-return-const-encoding-pointers",
]
bindgen-enable-function-attribute-detection = [
  "rb-sys-build/bindgen-enable-function-attribute-detection",
]

[lib]
doctest = false
