[package]
name = "rb-sys-cli-phase-0"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
license = "MIT OR Apache-2.0"
description = "Phase 0: OCI image download and extraction for rb-sys-cli"
authors = ["Ian Ker-Seymer <i.kerseymer@gmail.com>"]

[[bin]]
name = "rb-sys-cli-phase-0"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
oci-distribution = "0.11"
zstd = "0.13"
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-indicatif = "0.3"
indicatif = "0.17"
# For tarball download and verification
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
blake3 = "1.5"
xz2 = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
# For rbconfig.rb parsing
ruby-prism = "1.2"
regex = "1"
# For temp directories and unique IDs
uuid = { version = "1.0", features = ["v4"] }
# For streaming extraction
async-compression = { version = "0.4", features = ["xz", "tokio"] }
globset = "0.4"

[dev-dependencies]
tempfile = "3"
