[package]
name = "rb-sys-cli-phase-1"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
license = "MIT OR Apache-2.0"
description = "Phase 1: Codegen and packaging for rb-sys-cli"
authors = ["Ian Ker-Seymer <i.kerseymer@gmail.com>"]

[[bin]]
name = "rb-sys-cli-phase-1"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zstd = "0.13"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-indicatif = "0.3"
indicatif = "0.17"
tempfile = "3"
blake3 = "1.5"
rb-sys-build = { path = "../../rb-sys-build" }
