[package]
name = "rust_reverse"
version = "0.9.70"
autotests = true # set true if you want to use "cargo test"
edition = "2018"

[dependencies]
rb-sys = { version = "0.9.70", path = "./../../../../crates/rb-sys", features = ["global-allocator"] }

[lib]
crate-type = ["cdylib"]

[features]
test-feature = []
